test/files/pos/t8062/B_2.scala
object Test {
  warmup.Warmup.filter[Any](x => false)
}
