test/files/neg/macro-invalidshape/Impls_1.scala
import scala.reflect.macros.{BlackboxContext => Ctx}

object Impls {
  def foo(c: Ctx)(x: c.Expr[Any]) = ???
}
